--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,10 +2,10 @@
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/foodstock
+spring.datasource.url=jdbc:postgresql://localhost:5433/foodstock_entegrador_3
 spring.datasource.username=postgres
 spring.datasource.password=0000
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
