--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=create.sql
 #spring.jpa.properties.hibernate.hbm2ddl.delimiter=;
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/foodstock_entegrador_3
+spring.datasource.url=jdbc:postgresql://localhost:5433/foodstock_entegrador_3?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=0000
 
