--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 
-spring.profiles.active=${APP_PROFILE:dev}
+spring.profiles.active=${APP_PROFILE:test}
 spring.jpa.open-in-view=false
+
+spring.security.token.secret=food
+
 
 
 cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
