--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 			<version>4.4.0</version>
 		</dependency>
 
+		<!--Format Date -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
