--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,3 +10,7 @@ spring.h2.console.path=/h2-console
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.initialization-mode=always
+spring.datasource.schema=classpath:schema.sql
+spring.datasource.data=classpath:import.sql
